--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/platform-express": "^10.0.0",
-		"@prisma/client": "^5.10.2",
+		"@nestjs/platform-socket.io": "^10.3.3",
+		"@nestjs/websockets": "^10.3.3",
+		"@prisma/client": "^5.11.0",
 		"bcryptjs": "^2.4.3",
 		"cookie-parser": "^1.4.6",
 		"jsonwebtoken": "^9.0.2",
@@ -48,7 +50,7 @@
 		"eslint-plugin-prettier": "^5.0.0",
 		"jest": "^29.5.0",
 		"prettier": "^3.0.0",
-		"prisma": "^5.10.2",
+		"prisma": "^5.11.0",
 		"source-map-support": "^0.5.21",
 		"supertest": "^6.3.3",
 		"ts-jest": "^29.1.0",
